# DynamicSystem

./: .gitmodules  CMakeLists.txt  README.md  groups  project.config
include/: dynamic_system.hpp
source/: CMakeLists.txt  foo.cc  main.cc
source/tests/: CMakeLists.txt  test_disc.cc  test_foo.cc
